manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  progressDeadlineSeconds: 3600
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f compose.yaml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - image: backend
          name: backend
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/uploads
              name: videos
      restartPolicy: Always
      volumes:
        - name: videos
          persistentVolumeClaim:
            claimName: videos
