manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  progressDeadlineSeconds: 3600
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f compose.yaml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: frontend
          name: frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
