manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: backend
  type: ClusterIP
