manifests/backend-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/api`)
    kind: Rule
    priority: 100
    services:
    - name: backend
      port: 5000
    middlewares:
    - name: strip-api-prefix
